# ww-echo-policy-calculator

./: .gitignore  Cargo.toml  LICENSE  README.md  requirements.txt  requirements_ocr.txt  使用指南.txt
apps/desktop/src-tauri/: Cargo.toml  MAINTAINER_GUIDE.md  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/default-presets/: fixed.json  linear_default.json  mc_boost_assistant.json  qq_bot.json  wuwa_echo_tool.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app.rs  constants.rs  main.rs
apps/desktop/src-tauri/src/app/: commands.rs  commands_bootstrap.rs  commands_ocr.rs  commands_presets.rs  commands_presets_delete.rs  commands_presets_load_save.rs  commands_presets_shared.rs  commands_reroll.rs  commands_upgrade_policy.rs  commands_upgrade_preview.rs  presets.rs  presets_compare.rs  presets_defaults.rs  presets_resolution.rs  presets_resolution_groups.rs  presets_resolution_lookup.rs  presets_resolution_response.rs  presets_resolution_variants.rs  presets_weights.rs  run.rs  scoring.rs  scoring_core.rs  scoring_impl.rs  scoring_ocr.rs  scoring_weights_masks.rs  types.rs  types_data.rs  types_data_ocr.rs  types_data_presets.rs  types_data_reroll.rs  types_data_upgrade.rs  types_requests.rs  types_requests_common.rs  types_requests_presets.rs  types_requests_reroll_ocr.rs  types_requests_upgrade.rs  types_state.rs
ocr_test/: buff_workflow.py  capture_window_test.py
rust/: Cargo.toml
tauri_app/src-tauri/: Cargo.toml  tauri.conf.json
tauri_app/src-tauri/capabilities/: default.json
tauri_app/src-tauri/src/: main.rs
(+89 files in other folders)
